PMforce/src/objects/Feedback_Question_Main__c.object
<CustomObject>
    <fields>
        <fullName>Dummy__c</fullName>
        <label>Dummy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Five__c</fullName>
        <label>Option Five</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Four__c</fullName>
        <label>Option Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_One__c</fullName>
        <label>Option One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Three__c</fullName>
        <label>Option Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Two__c</fullName>
        <label>Option Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Option</label>
        <referenceTo>Question_Option__c</referenceTo>
        <relationshipLabel>Feedback Question Main</relationshipLabel>
        <relationshipName>Feedback_Question_Main</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Feedback__c</fullName>
        <label>Related Survey</label>
        <referenceTo>Feedback_Main__c</referenceTo>
        <relationshipLabel>Feedback Question Main</relationshipLabel>
        <relationshipName>Feedback_Question_Main</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_field__c</fullName>
        <label>Test field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Feedback Question Main</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Question_Option__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FQN-{0000}</displayFormat>
        <label>Feedback Questions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Question Main</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>